--- a/5.5/Dockerfile
+++ b/5.5/Dockerfile
@@ -1,4 +1,4 @@
 FROM mysql:5.5
 
 ENV MYSQL_ALLOW_EMPTY_PASSWORD=yes
-COPY docker-entrypoint-initdb.d /docker-entrypoint-initdb.db/
+COPY docker-entrypoint-initdb.d /docker-entrypoint-initdb.d
