--- a/8.0/Dockerfile
+++ b/8.0/Dockerfile
@@ -1,4 +1,4 @@
 FROM mysql:8.0
 
 ENV MYSQL_ALLOW_EMPTY_PASSWORD=yes
-COPY docker-entrypoint-initdb.d /docker-entrypoint-initdb.db/
+COPY docker-entrypoint-initdb.d /docker-entrypoint-initdb.d
